--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -20,6 +21,31 @@
         <p class="alert"><%= alert %></p>
       </div>
     <% end %>
+    <nav class="navbar is-info">
+  		<div class="navbar-brand">
+  		<%= link_to root_path, class: "navbar-item" do %>
+  			<h1 class="title is-5">Twittter</h1>
+  		<% end %>
+			<div class="navbar-burger burger" data-target="navbarExample">
+					<span></span>
+					<span></span>
+					<span></span>
+  		</div>
+  	 </div>
+
+			<div id="navbarExample" class="navbar-menu">
+				<div class="navbar-end">
+          <div class="navbar-item">
+					<div class="field is-grouped">
+						<p class="control">
+							<%= link_to 'New Tweeet', root_path, class: "button is-info is-inverted" %>
+						</p>
+            
+            </div>
+					</div>
+				</div>
+			</div>
+  	</nav>
     <%= yield %>
   </body>
 </html>
