--- a/app/views/tweeets/index.html.erb
+++ b/app/views/tweeets/index.html.erb
@@ -1,26 +1,17 @@
-<p id="notice"><%= notice %></p>
+<section class="section">
+  <div class="container">
+    <div class="columns">
+    	<% if user_signed_in? %>
+    		<%= render 'profile' %>
+    	<% else %>
+       <%= render 'trends' %>
+      <% end %>
 
-<h1>Tweeets</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Tweeet</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tweeets.each do |tweeet| %>
-      <tr>
-        <td><%= tweeet.tweeet %></td>
-        <td><%= link_to 'Show', tweeet %></td>
-        <td><%= link_to 'Edit', edit_tweeet_path(tweeet) %></td>
-        <td><%= link_to 'Destroy', tweeet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+       <%= render 'feed' %>
+       <%= render 'who-to-follow' %>
+    </div>
+  </div>
+</section>
 
 <br>
 
